--- a/css/main.css
+++ b/css/main.css
@@ -169,13 +169,13 @@ footer{
 
 }
 hr {
-  border: 2px solid #4DA1A9;
+  border: 1px dotted #4DA1A9;
   margin-bottom: 1rem;
 }
 
 hr.style1 {
   border: none;
-  border-bottom: 2px dotted #4DA1A9;
+  border-bottom: 2px solid #4DA1A9;
   width: 180px;
   margin: 0;
   margin-bottom: 1rem;
