--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,6 @@ body {
 h2, h3, h4{
   text-transform: uppercase;
   color: rgb(60,60,65);
-  letter-spacing: 1px;
   }
 
 h1 { font-size: 4.0rem; line-height: 1.2; padding: 2px; font-family: 'Shadows Into Light Two', cursive; margin-top: -10vh; font-weight: bold;}
@@ -169,7 +168,7 @@ footer{
 
 }
 hr {
-  border: 1px dotted #4DA1A9;
+  border: 1px dotted 	rgba(77,161,169,0.6);
   margin-bottom: 1rem;
 }
 
