--- a/css/main.css
+++ b/css/main.css
@@ -196,11 +196,7 @@ hr.style1 {
 }
 
 /*PORTFOLIO STYLES*/
-#portfolio  {
-  background-image: url("../images/linebodyworks.jpg");
-  background-size: cover;
 
-}
 
 /* ----- MODULAR ELEMENTS --------------------------- */
 
@@ -267,7 +263,6 @@ hr.style1 {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: 0 -40px;
   min-height: 80vh;
   padding: 5vh;
 }
@@ -479,6 +474,32 @@ p {
   }
   .mob-flip div {
       width: 100%; /* This fixes a flexbox bug */
+  }
+
+  hr.style1 {
+    border: none;
+    border-bottom: 2px solid #4DA1A9;
+    width: 350px;
+    margin: 0;
+    margin-bottom: 1rem;
+  }
+
+  #intro-banner {
+    background-image: url("../images/mess.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 80vh;
+    padding: 5vh;
+  }
+
+  .spotify {
+    width: 330px;
+    height: 400px;
+  }
+
+  .blog-button {
+    text-align: center;
   }
 
   /* ------ General Mobile Styles ---------*/
