--- a/css/main.css
+++ b/css/main.css
@@ -284,7 +284,7 @@ hr.style1 {
 }
 
 #lineabody:hover{
-  background-image: url("../images/lineabody.jg\pg");
+  background-image: url("../images/lineabodyworks.jpg");
   background-size: contain;
   background-repeat: no-repeat;
   min-height: 45vh;
