--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,10 @@ li  { font-size: 1.1rem; }
 .color {
   color: #4DA1A9;
 }
+
+.color.fa{
+  font-size: 2.0rem;
+}
 /* Padding & Margin */
 
 section{
