--- a/css/main.css
+++ b/css/main.css
@@ -330,7 +330,7 @@ text-decoration: none;
 .feedpost .tagline {
     font-family: 'Quicksand', sans-serif;
     font-size: 1rem;
-    letter-spacing: 1px;
+    /*letter-spacing: 1px;*/
     color: #4DA1A9;
     padding: 0;
     text-transform: uppercase;
