--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ title: Shop
 ---
 
 <section class="tall feedpost">
-<img class="full-width" src="{{page.image_path}}">
+<div><img class="full-width" src="{{page.image_path}}"></div>
   <div class="post-body feedpost">
       
       <h1> {{page.title}} </h1>
